--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -89,8 +89,8 @@
                     <div class="d-flex align-items-start gap-4">
                         <img alt="review-1" class="rounded-0" src="" th:src="@{/images/reviews/review-1.jpg}"/>
                         <div>
-                            <h5 class="fw-medium mb-0">Ayoub Zelbani</h5>
-                            <p class="mb-0">IT Engineering Student</p>
+                            <h5 class="fw-medium mb-0">John Smith</h5>
+                            <p class="mb-0">University Student</p>
                         </div>
                     </div>
                 </div>
@@ -105,8 +105,8 @@
                     <div class="d-flex align-items-start gap-4">
                         <img alt="review-2" class="rounded-0" src="" th:src="@{/images/reviews/review-2.jpg}"/>
                         <div>
-                            <h5 class="fw-medium mb-0">Ilyass Eljabri</h5>
-                            <p class="mb-0">IT Engineering Student</p>
+                            <h5 class="fw-medium mb-0">Emily Carter</h5>
+                            <p class="mb-0">High School Teacher</p>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                     <div class="d-flex align-items-start gap-4">
                         <img alt="review-3" class="rounded-0" src="" th:src="@{/images/reviews/review-3.jpg}"/>
                         <div>
-                            <h5 class="fw-medium mb-0">Hajar Nait Bakkou</h5>
-                            <p class="mb-0">IT Engineering Student</p>
+                            <h5 class="fw-medium mb-0">Alex Johnson</h5>
+                            <p class="mb-0">Online Learner</p>
                         </div>
                     </div>
                 </div>
